@@ -3,6 +3,26 @@
     metal:use-macro="container/main_template/macros/master"
     i18n:domain="plone">
 <metal:head fill-slot="javascript_head_slot">
+<tal:defines define="js python:here.getCriteriaUniqueWidgetAttr('helper_js');
+                     css python:here.getCriteriaUniqueWidgetAttr('helper_css');">
+    <tal:css condition="css"
+             repeat="item css">
+      <style type="text/css"
+             media="all"
+             tal:condition="python:exists('portal/%s' % item)"
+             tal:content="string:@import url($portal_url/$item);">
+      </style>
+    </tal:css>
+
+    <tal:js condition="js"
+            repeat="item js">
+      <script type="text/javascript"
+              charset="iso-8859-1"
+              tal:condition="python:exists('portal/%s' % item)"
+              tal:attributes="src string:$portal_url/$item">
+      </script>
+    </tal:js>
+
     <script type="text/javascript"
             tal:attributes="src string:$portal_url/modifySelectList.js">
     </script>
@@ -23,6 +43,7 @@
              if (helpElement) {helpElement.innerHTML = helpText;}
             }
     </script>
+</tal:defines>
 </metal:head>
 
 <body>
